--- a/static/css/base.css
+++ b/static/css/base.css
@@ -57,6 +57,10 @@ body {
   border: 1px solid black !important;
 }
 
+.bg-black {
+  background: #000;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
