added shopping bag, urls and template

--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -16,7 +16,7 @@
     class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0"
     aria-labelledby="mobile-search"
   >
-    <form class="form" method="GET" action=" {% url 'products' %}">
+    <form class="form" method="GET" action="{% url 'products' %}">
       <div class="input-group w-100">
         <input
           class="form-control border border-black rounded-0"
@@ -58,6 +58,7 @@
       >Product Management</a
     >
     {% endif %}
+    <a href="" class="dropdown-item">My Profile</a>
     <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
     {% else %}
     <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
@@ -68,7 +69,7 @@
 <li class="list-inline-item">
   <a
     class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none"
-    href=""
+    href="{% url 'view_bag' %}"
   >
     <div class="text-center">
       <div><i class="fas fa-shopping-bag fa-lg"></i></div>
