--- a/templates/base.html
+++ b/templates/base.html
@@ -122,7 +122,7 @@
             <li class="list-inline-item">
               <a
                 class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
-                href=""
+                href="{% url 'view_bag' %}"
               >
                 <div class="text-center">
                   <div><i class="fas fa-shopping-bag fa-lg"></i></div>
@@ -158,7 +158,7 @@
       <div id="delivery-banner" class="row text-center">
         <div class="col bg-black text-white">
           <h4 class="logo-font my-1">
-            Free delivery on orders over ${{ free_shipping_threshold }}!
+            Free delivery on orders over ${{ free_delivery_threshold }}!
           </h4>
         </div>
       </div>
