--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -77,6 +77,17 @@
               <p class="mt-3"><strong>Quantity:</strong></p>
               <div class="form-group w-50">
                 <div class="input-group">
+                  <div class="input-group-prepend">
+                    <button
+                      class="decrement-qty btn btn-black rounded-0"
+                      data-item_id="{{ product.id }}"
+                      id="decrement-qty_{{ product.id }}"
+                    >
+                      <span class="icon">
+                        <i class="fas fa-minus"></i>
+                      </span>
+                    </button>
+                  </div>
                   <input
                     class="form-control qty_input"
                     type="number"
@@ -87,6 +98,17 @@
                     data-item_id="{{ product.id }}"
                     id="id_qty_{{ product.id }}"
                   />
+                  <div class="input-group-append">
+                    <button
+                      class="increment-qty btn btn-black rounded-0"
+                      data-item_id="{{ product.id }}"
+                      id="increment-qty_{{ product.id }}"
+                    >
+                      <span class="icon">
+                        <i class="fas fa-plus"></i>
+                      </span>
+                    </button>
+                  </div>
                 </div>
               </div>
             </div>
@@ -119,4 +141,6 @@
     </div>
   </div>
 </div>
-{% endblock %}
+{% endblock %} {% block postloadjs %} {{ block.super }}
+<!--  -->
+{% include 'products/includes/quantity_input_script.html' %} {% endblock %}
